--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
   },
   "homepage": "https://github.com/clintcan/mongopay#readme",
   "dependencies": {
-    "node-fetch": "^3.0.0"
+    "axios": "^0.21.4"
   }
 }
