fixes in get method

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongopay",
-  "version": "0.7.0-1",
+  "version": "0.7.1",
   "description": "This is a library which maps functions to the paymongo API",
   "main": "mongopay.js",
   "scripts": {
